--- a/_posts/2023-11-7-bios.md
+++ b/_posts/2023-11-7-bios.md
@@ -7,7 +7,7 @@ tags: [sistema-operativo]
 pin: false
 ---
 
-BIOS, por sus siglas "Basic Input/Output System" (Sistema Básico de Entrada/Salida), es un software de bajo nivel que reside en un chip de la placa base de una computadora. Su función principal es proporcionar una interfaz entre el [hardware]({% post_url 2023-11-7-hardware %}) de la computadora y el sistema operativo.
+BIOS, por sus siglas "Basic Input/Output System" (Sistema Básico de Entrada/Salida), es un [software]({% post_url 2023-11-7-software %}) de bajo nivel que reside en un chip de la placa base de una computadora. Su función principal es proporcionar una interfaz entre el [hardware]({% post_url 2023-11-7-hardware %}) de la computadora y el sistema operativo.
 
 La BIOS realiza varias tareas esenciales durante el proceso de arranque de la computadora, incluyendo la inicialización y prueba del [hardware]({% post_url 2023-11-7-hardware %}), la carga del sistema operativo en la memoria RAM y la gestión de las comunicaciones entre el sistema operativo y el [hardware]({% post_url 2023-11-7-hardware %}).
 
